* motion: correctly define conffiles (do not overwrite config file on reinstallation)
* thermometer: different versions for Turris and Omnia
* dejavu-fonts-ttf, mplayer, fbida, fontconfig: removed
* mwan3: fixed path to the ip command
* multiwan: completely removed
* unbound: fix regexp in anchor recovery script
* hostapd: Version bump/security fixes
* nginx: More modules
* minidlna: Fix linker errors
* ucollect: Fix segfault in fwup
* syslog-ng3: use dgram only on musl.
* ddns-scripts: update to version 2.7.1-2, which should be compatible with current luci-app-ddns
* logrotate: add missing dependencies and cron script.
* nuci: ntpdate is used for time synchronization.
===================== 3.0 =======================
* knot: update to 2.1.1
* tvheadend: update to 4.0.9.
* python-turris-gpio: Updated pin numbers for Linux >= 3.18.
* Foris (v64): Add background color to fix legibility with dark system themes.
* syslog-ng: Default to dgram instead of stream
* updater: Don't reinstall everything if list-opkg fails
* updater: Integrate opkg update
* automatic restart of enabled services on update
* enabled some basic hardening - FORTIFY_SOURCES=2 and RELRO
* user_notify: Less chance of stray lock
* c_rehash: Fix removal of dangling symlinks
* ip: Plnější ip (efektivně ip-full)
* ucollect-fwup: Poradí si se změnou velikosti ipsetu
* nuci-tls: Posluchá i na IPv6
* unbound: Pokus obnovit rozbitou kořenovou kotvu
===================== 2.8 =======================
* user_notify: lokalizace všech textů.
* foris-tls-plugin: nový plugin - GUI pro nuci-tls.
* Foris (v61): podpora pro pluginy.
* daemon-watchdog: Možnost nepouštět unbound
* ucollect-fwup: Skript na update ipsets
* nuci: Přidán plugin neighbours, který dokáže zobrazit připojené sousedy (okolní počítače, mobily, ....
===================== 2.7 =======================
* user_notify: hostname v předmětu mailu, oprava detekce jazyka.